...
                onClick = onRefresh
            )
            MpodButton(
                text = when {
                    isUnsubscribing -> "Removing"
                    isUnsubscribePending -> "Pending"
                    else -> "Unsubscribe"
                },
                primary = false,
                elevation = 0.dp,
                height = 32.dp,
                modifier = Modifier.weight(1f),
                enabled = unsubscribeEnabled && !isUnsubscribing && !isUnsubscribePending,
...
